# adventofcode-2016-rust

./: .gitignore  Cargo.toml
src/: day.rs  day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  ioc.rs  main.rs
