[package]
name = "adventofcode-2016-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.7"
grid = "0.8.1"
regex = "1.6.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
chrono = "0.4.22"

[dev-dependencies]
rstest = "0.15.0"
criterion = "0.3.6"
